syntax = "proto3";
package data_analyzer;

message AnalyzeDataRequest {
  string input_file_path = 1;
  float anomaly_threshold = 2;
}

message AnalyzeDataResponse {
  bool success = 1;
  string message = 2;
  int32 total_records = 3;
  int32 anomalies_detected = 4;
  float average_efficiency = 5;
}

service DataAnalyzerService {
  rpc AnalyzeData(AnalyzeDataRequest) returns (AnalyzeDataResponse);
}